examples/failing/ImportModule.purs
-- @shouldFailWith UnknownName
module Main where

import M1
